dataset1235/2025-2/1153765216/users/2719941446/executions/2747719322_3691284457.log
== RUN (2025-08-25 20:34:30)
-- CODE: 
n1=float(input("Digite nota 1:"))
n2=float(input("Digite nota 2: "))
n3=float(input("Digite nota 3: "))
  n4=float(input("Digite nota 4: "))

media_pond=(n1*1+n2*2+n3*3+n4*4)/(1+2+3+4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 4
    n4=float(input("Digite nota 4: "))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 4
    n4=float(input("Digite nota 4: "))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 4
    n4=float(input("Digite nota 4: "))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 4
    n4=float(input("Digite nota 4: "))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 4
    n4=float(input("Digite nota 4: "))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 4
    n4=float(input("Digite nota 4: "))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 20:34:52)
-- CODE: 
n1=float(input("Digite nota 1:"))
n2=float(input("Digite nota 2: "))
n3=float(input("Digite nota 3: "))
  n4=float(input("Digite nota 4: "))

media_pond=(n1*1+n2*2+n3*3+n4*4)/(1+2+3+4)

print(round(media_pond,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 4
    n4=float(input("Digite nota 4: "))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 4
    n4=float(input("Digite nota 4: "))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 4
    n4=float(input("Digite nota 4: "))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 4
    n4=float(input("Digite nota 4: "))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 4
    n4=float(input("Digite nota 4: "))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 4
    n4=float(input("Digite nota 4: "))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 20:34:54)
-- CODE: 
n1=float(input("Digite nota 1:"))
n2=float(input("Digite nota 2: "))
n3=float(input("Digite nota 3: "))
  n4=float(input("Digite nota 4: "))

media_pond=(n1*1+n2*2+n3*3+n4*4)/(1+2+3+4)

print(round(media_pond,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 4
    n4=float(input("Digite nota 4: "))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 4
    n4=float(input("Digite nota 4: "))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 4
    n4=float(input("Digite nota 4: "))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 4
    n4=float(input("Digite nota 4: "))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 4
    n4=float(input("Digite nota 4: "))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 4
    n4=float(input("Digite nota 4: "))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 20:35:06)
-- CODE: 
n1=float(input("Digite nota 1:"))
n2=float(input("Digite nota 2: "))
n3=float(input("Digite nota 3: "))
n4=float(input("Digite nota 4: "))

media_pond=(n1*1+n2*2+n3*3+n4*4)/(1+2+3+4)

print(round(media_pond,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite nota 1:Digite nota 2: Digite nota 3: Digite nota 4: 7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite nota 1:Digite nota 2: Digite nota 3: Digite nota 4: 8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite nota 1:Digite nota 2: Digite nota 3: Digite nota 4: 7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite nota 1:Digite nota 2: Digite nota 3: Digite nota 4: 6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite nota 1:Digite nota 2: Digite nota 3: Digite nota 4: 30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite nota 1:Digite nota 2: Digite nota 3: Digite nota 4: 7.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 20:35:29)
-- CODE: 
n1=float(input("Digite nota 1:"))
n2=float(input("Digite nota 2: "))
n3=float(input("Digite nota 3: "))
n4=float(input("Digite nota 4: "))

media_pond=(n1*1+n2*2+n3*3+n4*4)/(1+2+3+4)

print(round(media_pond,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite nota 1:Digite nota 2: Digite nota 3: Digite nota 4: 7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite nota 1:Digite nota 2: Digite nota 3: Digite nota 4: 8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite nota 1:Digite nota 2: Digite nota 3: Digite nota 4: 7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite nota 1:Digite nota 2: Digite nota 3: Digite nota 4: 6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite nota 1:Digite nota 2: Digite nota 3: Digite nota 4: 30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite nota 1:Digite nota 2: Digite nota 3: Digite nota 4: 7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
